Fixed header responsive whitespace

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 h2 {
-  font-size: 32px;
+  font-size: 25px;
 }
 
 h3 {
@@ -47,18 +47,14 @@ ul {
 .container {
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0 30px;
+  /* padding: 0 30px; */
 }
-
-
-
-
 
 @media all and (max-width: 600px) {
   article {
     width: 90vw;
     margin: 0 auto;
-    padding: 40px;
+    /* padding: 40px; */
     margin: 0 auto;
     font-size: 18px;
     line-height: 1.6;
@@ -75,8 +71,6 @@ ul {
     line-height: 1.6;
   }
 }
-
-
 
 .navbar {
   background: #fff;
@@ -105,12 +99,20 @@ ul {
 }
 
 .navbar ul {
-  display: flex;
+  display: none;
 }
 
 .navbar ul li {
   margin-left: 20px;
 }
+
+/* Tab menu */
+/* .nav {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+} */
 
 .header {
   background: linear-gradient(332deg, rgba(185,0,95,1) 0%, rgba(227,0,89,1) 100%);
